# uv_sandbox

./: .pre-commit-config.yaml  README.md  hello.py  pyproject.toml
.uv/: cuda118.toml
