[project]
name = "uv-sandbox"
version = "0.1.0"
description = "For CUDA 12.4 environments"
readme = "README.md"
requires-python = ">=3.9"


[project.optional-dependencies]
torch = [
  "torch",
  "torchvision",
  "numpy",
]

vis = [
  "jupyter",
  "ipykernel",
  "ipywidgets",
  "matplotlib",
  "pandas",
  "scipy",
  "seaborn",
  "scikit-learn",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"

[dependency-groups]

gpu = ["torch>=2.6.0"]
common = []
dev = ["markdown-toc>=1.2.6", "pre-commit>=4.2.0", "ruff>=0.11.2"]

[tool.uv]
conflicts = [
  [
    { extra = "torch" },
    { extra = "vis" },
  ],
]